--- a/css/main.css
+++ b/css/main.css
@@ -32,8 +32,6 @@ header nav li a {
     background-color: #1A437A;
     text-decoration: none;
     color: #ffffff;
-    padding: 15px 60px;
-    font-size: 23px;
     font-weight: 700;
     border-radius: 8px;
     white-space: nowrap;
@@ -41,6 +39,11 @@ header nav li a {
 
 header li {
     list-style: none;
+}
+
+header span {
+    font-size: 30px;
+    /* font-family: "Comic Sans MS", "Comic Sans", cursive; */
 }
 
 header nav a:hover {
@@ -90,33 +93,71 @@ header nav a:hover {
 
 /* // Devices smaller than 576px */
 @media (max-width: 575px) {
-    
+    header nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    header a img {
+        display: block;
+        margin: 0 auto;
+    }
+
+    header nav li {
+        padding: 10px 10px;
+        font-size: 16px;
+        margin-bottom: 8px;
+    }
+
+    header nav li a {
+        padding: 10px 10px;
+        display: block;
+        min-width: 200px;
+    }
 }
 
 /* // Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { 
-    
+    header nav li a {
+        padding: 10px 20px;
+        font-size: 16px;
+    }
 }
 
 /* // Medium devices (tablets, 768px and up ) */
 @media (min-width: 768px) { 
-
+    header nav li a {
+        padding: 15px 20px;
+        font-size: 16px;
+    }
 }
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
-
+    header nav li a {
+        padding: 15px 50px;
+        font-size: 16px;
+    }
 }
 
 /* // X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 
-
+    header nav li a {
+        padding: 15px 50px;
+        font-size: 16px;
+    }
 }
 
 /* // XX-Large devices (larger desktops, 1400px and up) */
 @media (min-width: 1400px) { 
+    
+}
+
+/* // XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1850px) { 
     header nav li a {
         padding: 15px 100px;
+        font-size: 18px;
     }
 }
 
