--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,7 @@ header nav a:hover {
     header nav {
         flex-direction: column;
         align-items: center;
+        margin: 15px 0;
     }
 
     header a img {
