--- a/css/main.css
+++ b/css/main.css
@@ -15,12 +15,12 @@ h2 {
 }
 
 a {
+    color: #000000;
     text-decoration: none;
-    color: #fff;
 }
 
 a:hover {
-    color: #fff;
+    color: grey;
 }
 
 .row.row-eq-height {
@@ -113,6 +113,18 @@ header nav a:hover {
 
 /* /homepage */
 
+/* Service pagina */
+
+.service-content  {
+    color: black;
+}
+
+.service-content li,a {
+    font-weight: 700;
+}
+
+/* /Servicepagina */
+
 
 /* media queries */
 
@@ -140,6 +152,14 @@ header nav a:hover {
         display: block;
         min-width: 200px;
     }
+
+    .service-content {
+        margin-bottom: 20px;
+    }
+
+    .service-content h3 {
+        text-align: center;
+    }
 }
 
 /* // Small devices (landscape phones, 576px and up) */
@@ -163,6 +183,10 @@ header nav a:hover {
     header nav li a {
         padding: 15px 50px;
         font-size: 16px;
+    }
+
+    .service-content {
+        margin-bottom: 30px;
     }
 }
 
